--- a/chicken.html
+++ b/chicken.html
@@ -17,10 +17,10 @@
         <nav id="header-nav" class="navbar navbar-expand-lg lg-body-territory">
             <div class="container">
                 <div clss="navbar-header">
-                    <a href="chicken.html" style="float: left;" class="me-auto mb-2 mb-lg-0">
+                    <a href="index.html" style="float: left;" class="me-auto mb-2 mb-lg-0">
                     </a>
                     <div class="navbar-brand">
-                        <a class="nav-link active" aria-current="page" href="chicken.html"><h1>OUR MENU</h1></a>
+                        <a class="nav-link active" aria-current="page" href="index.html"><h1>OUR MENU</h1></a>
                     </div>    
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-expanded="false">
@@ -35,17 +35,17 @@
                 <div id="navbarSupportedContent" class="collapse navbar-collapse">
                     <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"  href="chicken.html">
+                            <a class="nav-link active" aria-current="page"  href="index.html">
                                 <br class="me-auto mb-2 mb-lg-0"> Chicken
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"  href="chicken.html">
+                            <a class="nav-link active" aria-current="page"  href="index.html">
                                 <br class="me-auto mb-2 mb-lg-0"> Beef 
                             </a>
                         </li>
                         <li>
-                            <a href="chicken.html" class="nav-link active" aria-current="page">
+                            <a href="index.html" class="nav-link active" aria-current="page">
                                 <br class="me-auto mb-2 mb-lg-0"> Sushi
                             </a>
                         </li>
@@ -58,7 +58,7 @@
         <h2 id="menu-categories-title" class="text-center">Chicken</h2>
         <section class="row">
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="chicken.html">
+                <a href="index.html">
                     <div class="category-tile">
                         <span>Chicken</span>
                         <p class="menu-item-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam molestiae temporibus ullam in, expedita tempore ratione quam a ex dolorem, exercitationem aliquam enim nesciunt, praesentium molestias voluptatibus odit quaerat!
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="chicken.html">
+                <a href="index.html">
                     <div class="category-tile">
                         <span>Beef</span>
                         <p class="menu-item-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam molestiae temporibus ullam in, expedita tempore ratione quam a ex dolorem, exercitationem aliquam enim nesciunt, praesentium molestias voluptatibus odit quaerat!
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="chicken.html">
+                <a href="index.html">
                     <div class="category-tile">
                         <span>Sushi</span>
                         <p class="menu-item-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam molestiae temporibus ullam in, expedita tempore ratione quam a ex dolorem, exercitationem aliquam enim nesciunt, praesentium molestias voluptatibus odit quaerat!   
